--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
         <main class="container my-4">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Orders by Date and Status</h2>
+                    <h2>Orders by Date</h2>
                     <canvas id="ordersChart"></canvas>
                 </div>
             </div>
@@ -190,7 +190,7 @@
     <script>
         $(document).ready(function () {
             const table = $('#ordersTable').DataTable();
-            fetch('http://ec2-43-205-116-125.ap-south-1.compute.amazonaws.com:3000/orders')
+            fetch('http://ec2-13-233-225-185.ap-south-1.compute.amazonaws.com:3000/orders')
                 .then(response => response.json())
                 .then(data => {
                     data.forEach(order => {
